--- a/static/index.html
+++ b/static/index.html
@@ -73,7 +73,7 @@
     </script>
 
     <!-- SDK REFERENCE -->
-    <script src="../distrib\speech.browser.sdk-min.js"></script>
+    <script src="distrib/speech.browser.sdk-min.js"></script>
 
     <!-- SDK USAGE -->
     <script>
