--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
         </tr>
         <tr>
             <td align="right"><a href="https://www.microsoft.com/cognitive-services/en-us/sign-up" target="_blank">Subscription</a>:</td>
-            <td><input id="key" type="text" size="40" value="YOUR_BING_SPEECH_API_KEY"></td>
+            <!-- <td><input id="key" type="text" size="40" value="YOUR_BING_SPEECH_API_KEY"></td> -->
         </tr>
         <tr>
             <td align="right">Laguage:</td>
@@ -173,7 +173,7 @@
             phraseDiv = document.getElementById("phraseDiv");
             hypothesisDiv = document.getElementById("hypothesisDiv");
             statusDiv = document.getElementById("statusDiv");
-            key = document.getElementById("key");
+            key = "3e057acdb3254a6e944766609a2ebaee";
             languageOptions = document.getElementById("languageOptions");
             formatOptions = document.getElementById("formatOptions");
 
