--- a/static/index.html
+++ b/static/index.html
@@ -73,7 +73,7 @@
     </script>
 
     <!-- SDK REFERENCE -->
-    <script src="../distrib\speech.browser.sdk-min.js"></script>
+    <script src="distrib/speech.browser.sdk-min.js"></script>
 
     <!-- SDK USAGE -->
     <script>
@@ -173,7 +173,7 @@
             phraseDiv = document.getElementById("phraseDiv");
             hypothesisDiv = document.getElementById("hypothesisDiv");
             statusDiv = document.getElementById("statusDiv");
-            key = "3e057acdb3254a6e944766609a2ebaee";
+            key = document.getElementById("key");
             languageOptions = document.getElementById("languageOptions");
             formatOptions = document.getElementById("formatOptions");
 
