Testing translation again

--- a/static/index.html
+++ b/static/index.html
@@ -257,13 +257,13 @@
 	        	console.log(text);
                 console.log(data);
                 language = document.getElementById("languageOptions").value;
-                // translation = get_translation(text, "en-US");
-                // console.log(translation);
-                //console.log(translated);
+                translation = get_translation(text, "en-US");
+                console.log(translation);
+                console.log(translated);
 	        	for (var i = 0; i < data.tags.length; ++i) {
 	        		name = data.tags[i]["name"];
 	        		tags.push(name);
-	        		if (text.search(name) != -1) {
+	        		if (translation.search(name) != -1) {
 	        			ok = true;
 	        			result += name + " ";
 	        		}
