--- a/static/index.html
+++ b/static/index.html
@@ -259,7 +259,7 @@
                 language = document.getElementById("languageOptions").value;
                 translation = get_translation(text, "en-US");
                 console.log(translation);
-                console.log(translated);
+                // console.log(translated);
 	        	for (var i = 0; i < data.tags.length; ++i) {
 	        		name = data.tags[i]["name"];
 	        		tags.push(name);
