--- a/static/index.html
+++ b/static/index.html
@@ -292,7 +292,7 @@
                     bearer_token = 'Bearer ' + data;
                     console.log(bearer_token);
                     // headers = {"Authorization": bearer_token}
-                    translateUrl = 'http://api.microsofttranslator.com/v2/Http.svc/Translate?text=' + text + '&to=en&appId=' + bearer_token;
+                    translateUrl = 'https://api.microsofttranslator.com/v2/Http.svc/Translate?text=' + text + '&to=en&appId=' + bearer_token;
                     console.log(translateUrl);
                     $.ajax({
                         url: encodeURI(translateUrl),
