--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
 
     <div class="container-fluid well" style="width: 80%; margin-left: 10%">
         <div class="row">
-            <h3 style="font-weight:500;">Speech Recognition ( Cognitive Services )</h3>
+            <h3 style="font-weight:500;">Awesome classifier</h3>
         </div>
         <div class="row" style="display: none;">
             <div class="col-md-3 col-md-offset-1">
@@ -50,13 +50,10 @@
             </div>
             <div class="col-md-3">
                 <select id="languageOptions" class="form-control">
-                    <option value="zh-CN">Chinese - CN</option>
                     <option value="en-GB">English - GB</option>
                     <option value="en-US" selected="selected">English - US</option>
                     <option value="fr-FR">French - FR</option>
                     <option value="de-DE">German - DE</option>
-                    <option value="it-IT">Italian - IT</option>
-                    <option value="es-ES">Spanish - ES</option>
                 </select>
             </div>
         </div>
