Last minute modifications

--- a/static/index.html
+++ b/static/index.html
@@ -57,11 +57,11 @@
                 </select>
             </div>
         </div>
-        <div class="row">
+        <div class="row hidden">
             <div class="col-md-2 vcenter">
                 <p>Format:</p>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3" >
                 <select id="formatOptions" class="form-control">
                     <option value="Simple" selected="selected">Simple Result</option>
                     <option value="Detailed">Detailed Result</option>
