--- a/static/index.html
+++ b/static/index.html
@@ -297,6 +297,7 @@
 	        			result += name + " ";
 	        		}
 	        	}
+                console.log("THE TAGS", tags);
 	        	$("#result").html(result);
 	            // alert("success");
 	        })
